testing/tests/melt/negative/lvalues_9.c

int main() 
{
    int n = 0;
    -n = 2; // Negation converts lvalues to rvalues.
    return 0;
}
